--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,34 +1,28 @@
 {
   "name": "forex-trading-platform",
   "version": "1.0.0",
-  "engines": {
-    "node": ">=16.0.0"
+  "private": true,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
+    "@mui/material": "^5.12.0",
+    "@mui/icons-material": "^5.11.16",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "node server.js"
+    "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.125",
-    "@mui/material": "^5.12.0",
-    "@mui/x-data-grid": "^6.0.4",
-    "axios": "^1.3.5",
-    "chart.js": "^4.2.1",
-    "date-fns": "^2.29.3",
-    "express": "^4.18.2",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
-    "socket.io-client": "^4.6.1"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -41,15 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.34",
-    "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.4"
   }
 }
